lo enviado al asesor para revisión

--- a/Capitulos/preliminares.tex
+++ b/Capitulos/preliminares.tex
@@ -73,7 +73,7 @@ La ecuación \ref{liouville} es el teorema de Liouville. Esto lo que dice es que
 
 Esta conclusión es la más clara al obtener el teorema de Liouville pero también hay consecuencias profundas dadas por este. Para ver las consecuencias que brinda el teorema seguiremos a \cite{KardarStat}.
 
-\subsection{Consecuencias del teorema de Liouville}
+\subsection{Consecuencias del Teorema de Liouville}
 La primera consecuencia es que al hacer una inversión temporal el corchete de poisson $[\rho, H]$ cambia de signo y esto predice que la densidad revierte su evolución. Es decir que al hacer la transformación $(p,q,t) \to (p,q,-t)$ el teorema de Liouvile implica $\rho(p,q,t)=\rho(-p,q,-t)$.
 La segunda es sobre la evolución del promedio de ensamble en el tiempo.
 \begin{equation}
