--- a/main.tex
+++ b/main.tex
@@ -91,7 +91,7 @@
 \textsc{presenta}\\[1em]
 
 \textsc{\Large 	GERMÁN EDUARDO OSORIO LEIVA}\\[1em]
-
+		
 \textsc{\large Asesor: Alonso Botero Mejía}
 
 \end{center}
@@ -185,12 +185,12 @@
 \thispagestyle{empty}
 \include{Capitulos/cap2}
 \thispagestyle{empty}
-\include{Capitulos/cap4}
-\thispagestyle{empty}
+%\include{Capitulos/cap4}
+%\thispagestyle{empty}
 \include{Capitulos/cap3}
 \thispagestyle{empty}
-\include{Capitulos/Conclusiones}
-\thispagestyle{empty}
+%\include{Capitulos/Conclusiones}
+%\thispagestyle{empty}
 
 
 
