--- a/Capitulos/cap2.tex
+++ b/Capitulos/cap2.tex
@@ -1,4 +1,4 @@
-\chapter{El Entrelazamiento y La Mecánica stadística} \label{cap:2}
+\chapter{El Entrelazamiento y La Mecánica Estadística} \label{cap:2}
 
 
 
@@ -19,7 +19,7 @@ El estado global puro del universo se escribirá como $\ket{\phi(t)}$ en un tiem
 \end{equation}
 de manera análoga $\omega_{S}$ y $\omega_{B}$ son el promedio temporal para el sistema y el ambiente respectivamente \cite{TodaStat}. También se tiene el promedio $\langle . \rangle_{\phi}$ que es sobre todos los estados $\ket{\phi} \in \mathcal{H}_{R}$ de acuerdo a la medida estándar (unitariamente invariante). Esta medida se usa para hallar volúmenes de conjuntos de estados.
 
-\section{Idea conceptual}
+\section{Idea Conceptual}
 
 Este nuevo tratamiento de los fundamentos de la mecánica estadística se tiene un universo. Dando como condición que el ambiente sea los suficientemente grande. Este universo está descrito por un estado cuántico puro (se conoce el estado de manera exacta) que obedece una restricción global. Se plantea que el sistema alcanza el equilibrio térmico por medio de la interacción mutua (termalización) es producto del entrelazamiento del sistema y el ambiente  \cite{Popescu2006}. Lo que se presentará más adelante es una definición más rigurosa que ayudará a dar cotas para la expresión "ambiente suficientemente grande".Esta idea permite formular un principio canónico general: el sistema estará termalizado para casi todos los estados puros del universo. esto es soportado por límites cuantitativos. La restricción que se impone no es una específica, esto generaliza los resultados tradicionales dados en la literatura donde se toma por restricción la energía \cite{KardarStat}.
 \\
@@ -57,7 +57,7 @@ se acerca al estado canónico para la gran mayoría de los casos es decir:
 \\
 Por consiguiente para casi todos los estados puros del universo $\ket{\phi} \in \mathcal{H}_{R}$ el sistema se comporta como si el universo estuviese en el estado mixto equiprobable $\mathcal{E}_{R}$. Este  es el principio general canónico. Clarificando lo esbozado, el estado canónico del sistema $\Omega_{S}$ es el estado del sistema cuando el universo se encuentra en el estado equiprobable $\mathcal{E}_{R}$. Se puede interpretar el principio general canónico como un principio que estipula que las probabilidades iguales del sistema son aparentes porque para casi cualquier estado del universo, que sea puro, un subsistema de este universo que cumpla con ser lo suficientemente pequeño se comporta como si el universo estuviese en el estado equiprobable $\mathcal{E}_{R}$. Cabe recordar que aún no se ha especificado la restricción $R$ entonces todo este análisis es general, la restricción no necesariamente debe ser la energía u otras cantidades que se conserven. Esto hace que $\Omega_{S}$ no  deba ser obligatoriamente el estado canónico usual, puede ser el gran canónico o cualquier otro que sea acorde con la restricción impuesta\cite{ReichlStat}. Este principio puede ser de utilidad cuando la interacción entre el ambiente y el sistema no es débil o cuando las interacciones son complicadas el principio general canónico también aplica.
 
-\section{Formulación matemática}
+\section{Formulación Matemática}
 
 Hasta ahora no se han entrado en los detalles ni en qué significa bastante pequeño o bastante grandes, ni tampoco se ha demostrado el principio general canónico. En esta sección se orientará en los detalles matemáticos, las herramientas usadas y la demostración de los teoremas que Popescu et. al siguienron. En la siguiente sección se dará una perspectiva más física a lo hecho aquí.
 \\
@@ -194,7 +194,7 @@ o sea
 
 Con esto se muestra que $\eta \le 2$.\\
 
-\subsection{Demonstración del principio general canónico}
+\subsection{Demonstración del Principio General Canónico}
 En esta parte se dará una demostración matemática explícita del principio general canónico usando el lema de Levy se entrará en los detalles matemáticos de usar este lema y las cotas adicionales que se necesitan para poder llegar al teorema \ref{teorema principal}. Habiendo dado una cota para $\eta$ ahora se puede usar por completo el lema \ref{lemma de levy} para la función $f(\phi)=\norm{\rho_{S} -\Omega_{S}}_{1}$ recordando que se reemplazará $d$ en el lema por $d=2d_{R}-1$.Tomando la parte derecha de la desigualdad de \ref{lemma de levy}  y sustituyendo la dimensión se tiene:
 
 \begin{equation}
@@ -393,7 +393,7 @@ en conclusión  $d^{eff}_{E} \geq d_{R}/ d_{S}$ entonces se obtiene
 \end{equation}
 Con esto se finaliza la demostración del teorema \ref{teorema principal} en la siguiente sección se hablará de sus consecuencias físicas.
 
-\section{Significado físico}
+\section{Significado Físico}
 
 El teorema anterior ya permite hablar del concepto importante que se sigue del aritculo de Popescu et al la idea general de la física es poder dar una relación uno a uno entre las propiedades de un objeto físico y su representación matemática con esta correspondencia se puede decir que la teoría esta completa cuando todas las propiedades que son posibles de medir tienen su semejante en la teoría \cite{Decoherence}. Por ejemplo en la física clásica a las cantidades como velocidad y distancia se le asigna los símbolos matemáticos $v$ y $x$, el cuerpo puede ser especificado dando estas dos cantidades en un tiempo determinado. La mecánica clásica nos da un ejemplo sencillo pero cuando se pasa a la mecánica estadística se encuentra perspectivas diferentes que entran en conflicto con esta sencilla idea. En los inicios de la mecánica estadística hubo muchas controversias dado a que ahora la idea determinista que Newton y otros habían mostrado como cierta (Se podía describir la naturaleza de manera predecible) ahora se introducía la probabilidad a sistemas que según Newton eran deterministas. En este punto se debe hacer claro que la necesidad de la probabilidad era por la falta de conocimiento pero no por un indeterminismo intrínseco como en la mecánica cuántica. Dos propuestas importantes surgieron en busca de una base conceptual sobre estas probabilidades, la visión de Gibbs y la de Boltzmann. Gibbs propuso la idea del ensamble, esta es una idea que hasta el día de hoy se sigue usando porque da los resultados correctos para las propiedades de sistemas termodinámicos.\\
 La idea de Gibbs es la siguiente: Se tiene un sistema macroscópico con ciertos parámetros que se pueden medir. Este sistema está compuesto por varias partículas que tienen posiciones y momentos, pero estas propiedades están restringidas por los parámetros macroscópicos. Entonces como no se puede conocer el microestado del sistemas, no se puede medir cada posición y momento de cada partícula, se tiene una libertad sobre cuál es el microestado dado el macroestado. El ensamble es el conjunto de microestados que cumplen con el macroestado, mientras el microestado cumpla con los parámetros macroscópicos hará parte del ensamble así el sistema no se encuentre en ese microestado. En teoría no hay limitación sobre el número de microestados que pertenezcan a un ensamble, este puede tener infinitos microestados. Esta idea de base para la función de densidad en el espacio de fase, cada punto en este espacio es un microestado estos micro estados no interactuan entre ellos , con esto se puede construir la mecánica estadística que se conoce \cite{PathriaStat}. 
