dandole coherencia al  texto

--- a/main.tex
+++ b/main.tex
@@ -179,7 +179,7 @@
 
 %  Incluye los capítulos en el folder de capítulos
 
-\include{Capitulos/preliminares}
+\include{Capitulos/introduccion}
 \thispagestyle{empty}
 \include{Capitulos/cap1}
 \thispagestyle{empty}
@@ -252,6 +252,7 @@
 \bibitem{JaynesI} Jaynes, E. (1957). Information Theory and Statistical Mechanics. Physical Review, 106(4), 620-630. http://dx.doi.org/10.1103/physrev.106.620
 \bibitem{JaynesII} Jaynes, E. (1957). Information Theory and Statistical Mechanics. II. Physical Review, 108(2), 171-190. http://dx.doi.org/10.1103/physrev.108.171
 \bibitem{ShannonInformation}Shannon, C. (1948). A Mathematical Theory of Communication. Bell System Technical Journal, 27(3), 379-423. http://dx.doi.org/10.1002/j.1538-7305.1948.tb01338.x
+\bibitem{Penrose}Penrose, O. (2014). Foundations of Statistical Mechanics. Newburyport: Dover Publications.
 \end{thebibliography}
 
 
