--- a/Capitulos/cap1.tex
+++ b/Capitulos/cap1.tex
@@ -1,6 +1,6 @@
 \chapter{Perspectivas}
 
-
+En este capítulo se indaga en las perspectivas que dieron origen a la mecánica estadística y se habla de la propuesta dada por E.T Jaynes. Primero, haciendo un recorrido histórico para situar el nacimiento de la mecánica estadística en un contexto sencillo de seguir. Después se exploran los punto de vista de Gibbs y Boltzmann de manera explícita. Viendo las dificultades que trae consigo cada propuesta. También se expondrá qué implicaciones tiene la hipótesis de ergodicidad. Finalizando este capítulo se verá una propuesta más actual entregada por E.T Jaynes.
 
 \section{Recuento Histórico}
 Para poder explicar las visiones más fundamentales de la mecánica estadística se debe dar un contexto histórico; porque es la forma más clara para ver cómo surgieron estas ideas. Por esto, en esta sección se mostrará las circunstancias y personajes en las que la termodinámica se formuló. Este recuento histórico sigue el libro de I. Muller \cite{MullerHistory}. Este libro muestra la historia de manera dinámica y accesible, por eso se sigue en este texto.
