--- a/Capitulos/introduccion.tex
+++ b/Capitulos/introduccion.tex
@@ -1,1 +1,13 @@
 \chapter{Introducción}
+La mecánica estadística muestra gran poder para comprender los fenómenos causados por sistemas de muchas partículas. Las predicciones teóricas concuerdan con los experimentos, pero el marco teórico en el que se fundamenta tiene problemas conceptuales que dejan a la teoría en un cimiento débil.  Para exhibir las incongruencias internas de los fundamentos. Se exploran las ideas de Boltzmann y de Gibbs, porque sus enfoques tienen un gran impacto en la creación del marco conceptual de la mecánica estadística.
+\\ 
+En la época de Botlzmann se encontraba la termodinámica como una teoría establecida. Aunque, no se tenían una óptica donde se le diera significado microscópico a la termodinámica. Boltzmann buscando una conexión entre la termodinámica y  el mundo microscópico plantea el teorema H. Este teorema muestra que al pasar el tiempo la función H decrece. La relación con la entropía termodinámica se da al multiplicar la función H por una constante -K, entonces se tiene que la entropía aumenta con el tiempo. El problema con la formulación hecha por Boltzmann, según Jaynes, es que la función H solo entrega la entropía termodinámica  cuando no hay interacción entre partículas.
+\\
+Unos años después, Gibbs postuló su noción de ensambles. Jaynes muesta que la entropía de Gibbs, para todos los casos, es la entropía termodinámica. Aunque sus resultados concuerden con la termodinámica, la entropía de Gibbs no puede dar explicación a la flecha del tiempo, porque esta entropía se conserva a diferencia de la de Boltzmann. Pese a esto el enfoque de Gibbs se muestra poderoso para resolver muchos problemas, pero Gibbs no explicó ¿cómo es posible hablar de un ensamble de posbiles estados microscópicos, estando en un solo estado microscópico? En la literatura se resuelve esta pregunta usando la hipótesis ergódica. Esto acarrea problemas porque no todos los sistemas son ergódicos; y el tiempo para que sistemas ergódicos pasen por todo el espacio son extremadamente grandes. 
+\\
+Nuevas propuestas han salido para resolver estos conflictos, como la perspectiva de Popescu et al. Este nuevo enfoque permite conciliar los puntos de vista anteriores usando herramientas de la teoría cuántica de la información. Esta formulación muestra que, si se tiene un sistema, compuesto por el ambiente y el subsistema, localmente (en el subsistema) se puede describir con una densidad canónica. Entonces hace válida la densidad canónica sin hacer uso de los ensambles, además las probabilidades no se introducen de una manera ajena a la teoría física. Se demuestra que el subsistema está en un estado equiprobable sin necesidad de mostrar ergodicidad en el sistema. También muestra de forma implícita la maximización de entropía por el entrelazamiento. Así es como esta perspectiva muestra una imagen más clara y fuerte del marco teórico. Linden et al mostraron que se puede explicar la termalización de los sistemas con ayuda de esta perspectiva, lo cual hace a la nueva formulación útil e interesante para futuras investigaciones.
+
+El siguiente documento mostrará estos planteamientos siguiendo este orden. Primero mostrando qué se ha hecho hasta ahora sobre los fundamentos de la mecánica estadística. Mostrando perspectivas importantes que marcaron la creación de la mecánica estadística. Luego se entrará exponer el nuevo enfoque dado por Popescu et al. Se reproducirán los cálculos de su artículo \cite{Popescu2006}, y se seguirá a analizar los resultados encontrados por ellos con respecto al entrelazamiento y los fundamentos de la mecánica estadística. Luego se presentará lo que Linden et al construyeron basándose en lo dicho en el capítulo anterior. Finalizando con las conclusiones que se encuentran al cambiar actuales por los encontrados en el nuevo enfoque.
+
+
+
