--- a/main.tex
+++ b/main.tex
@@ -64,7 +64,7 @@
 %	PORTADA
 %----------------------------------------------------------------------------------------
 
-\title{Revisión de los fundamentos termodinámicos desde la perspectiva de la teoría cuántica de la información} %Con este nombre se guardará el proyecto en writeLaTex
+\title{Revisión de los fundamentos de la mecánica estadística desde la perspectiva de la teoría cuántica de la información} %Con este nombre se guardará el proyecto en writeLaTex
 
 \begin{titlepage}
 \begin{center}
@@ -84,7 +84,7 @@
 
 \textsc{\large Tesis}\\[1em]
 
-\textsc{que para obtener el título de}\\[1em]
+\textsc{para obtener el título de}\\[1em]
 
 \textsc{FÍSICO}\\[1em]
 
@@ -107,30 +107,31 @@
 %----------------------------------------------------------------------------------------
 
 \thispagestyle{empty}
-\vspace*{\fill}
-\begingroup
-%``Con fundamento en los artículos 21 y 27 de la Ley Federal del Derecho de Autor y como titular de los derechos moral y patrimonial de la obra titulada ``\textbf{TÍTULO DE LA TESIS}'', otorgo de manera gratuita y permanente al Instituto Tecnológico Autónomo de México y a la Biblioteca Raúl Bailléres Jr., la autorización para que fijen la obra en cualquier medio, incluido el electrónico, y la divulguen entre sus usuarios, profesores, estudiantes o %terceras personas, sin que pueda percibir por tal divulgación una contraprestación''.
+\textit{"la frase "}
 
-\centering
+%\vspace*{\fill}
+%\begingroup
 
-\hspace{3em}
+%\centering
 
-\textsc{AUTOR}
+%\hspace{3em}
 
-\vspace{5em}
+%\textsc{AUTOR}
 
-\rule[1em]{20em}{0.5pt} % Línea para la fecha
+%\vspace{5em}
 
-\textsc{Fecha}
+%\rule[1em]{20em}{0.5pt} % Línea para la fecha
+
+%\textsc{Fecha}
  
-\vspace{8em}
+%\vspace{8em}
 
-\rule[1em]{20em}{0.5pt} % Línea para la firma
+%\rule[1em]{20em}{0.5pt} % Línea para la firma
 
-\textsc{Firma}
+%\textsc{Firma}
 
-\endgroup
-\vspace*{\fill}
+%\endgroup
+%\vspace*{\fill}
 
 
 %----------------------------------------------------------------------------------------
@@ -139,16 +140,16 @@
 
 \pagestyle{empty}
 \frontmatter
-
+RESUMEN
 
 %----------------------------------------------------------------------------------------
 %	AGRADECIMIENTOS
 %----------------------------------------------------------------------------------------
 
 
-%\chapter*{Agradecimientos}
-%\markboth{AGRADECIMIENTOS23}{AGRADECIMIENTOS} % encabezado 
-%Gracias a mis padres.
+\chapter*{Agradecimientos}
+\markboth{AGRADECIMIENTOS23}{AGRADECIMIENTOS} % encabezado 
+Gracias a mis padres.
 
 
 
